updated readme and ipynb

--- a/retail_reviews_classification.ipynb
+++ b/retail_reviews_classification.ipynb
@@ -313,7 +313,8 @@
    "source": [
     "#IMPORTANT: when you are done, run this code to remove your endpoint, so the costs don't accumulate!!!\n",
     "llm.delete_model()\n",
-    "llm.delete_endpoint()"
+    "llm.delete_endpoint()\n",
+    "#ALSO: make sure to delete the kernel too. To do that, go to far left hand pane, click on the \"Running Terminals and Kernels\" tab, and click \"Shut Down All\" for the Kernels section"
    ]
   },
   {
