--- a/retail_reviews_classification.ipynb
+++ b/retail_reviews_classification.ipynb
@@ -3,13 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a347ccd2-879e-45fa-9ac2-da1f30c9238c",
+   "id": "5ed3ccfd-e135-468b-9283-f426422632d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run this code if you are setting up your environment here for the first time\n",
-    "pip install sagemaker\n",
-    "pip install transformers"
+    "pip install --upgrade sagemaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5755b2a9-1059-42e1-8d1c-9abfb4ed7af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install --upgrade transformers"
    ]
   },
   {
@@ -342,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
